dummy_app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gowebapp-deployment
  labels:
    app: gowebapp
spec:
  selector:
    matchLabels:
      name: gowebapp
  template:
    metadata:
      labels:
        name: gowebapp
    spec:
      containers:
        - name: gowebapp
          image: nicomincuzzi/go-webapp:0.1.0
          resources:
            limits:
              memory: '64Mi'
              cpu: '1'
            requests:
              cpu: '50m'
          ports:
            - containerPort: 3030
              name: 'http'
---
apiVersion: v1
kind: Service
metadata:
  name: gowebapp-service
spec:
  type: ClusterIP
  selector:
    name: gowebapp
  ports:
    - port: 3030
      targetPort: http
      name: http
