ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: 'true'
  name: gowebapp
spec:
  ingressClassName: traefik
  rules:
    - host: gowebapp.dev.pettycashmate.co
      http:
        paths:
          - path: '/'
            pathType: Prefix
            backend:
              service:
                name: gowebapp-service
                port:
                  number: 3030
  tls:
    - hosts:
        - gowebapp.dev.pettycashmate.co
      secretName: gowebapp.dev.pettycashmate.co-tls
